elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    service: elasticsearch
spec:
  type: ClusterIP
  selector:
    component: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    service: kibana
spec:
  type: ClusterIP
  selector:
    component: kibana
  ports:
    - port: 5601
      targetPort: 5601
